# sparql_anything_rdf

./: README.md  example.ttl  pyproject.toml  requirements.txt  setup.py
src/sparql_anything_rdf/: __init__.py  cli.py  format_handler.py  rdf_parser.py  rdf_to_rdf.py  sparql_processor.py
tests/: __init__.py  test_format_handler.py  test_rdf_parser.py  test_sparql_processor.py
