[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparql-anything-rdf"
version = "1.0.0"
description = "A Python library for processing RDF data with SPARQL Anything"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "SPARQL Anything Team", email = "sparql.anything@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Database",
]
keywords = ["rdf", "sparql", "semantic-web", "linked-data", "turtle", "json-ld", "n-triples"]
requires-python = ">=3.8"
dependencies = [
    "rdflib>=6.0.0",
    "SPARQLWrapper>=2.0.0", 
    "requests>=2.25.0",
    "PyLD>=2.0.3",
    "lxml>=4.6.0",
    "rdflib-jsonld>=0.6.0",
    "python-dateutil>=2.8.0",
    "urllib3>=1.26.0",
    "cython>=0.29.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.910"
]

[project.urls]
Homepage = "https://github.com/sparql-anything/sparql-anything-rdf"
Repository = "https://github.com/sparql-anything/sparql-anything-rdf.git"
Documentation = "https://github.com/sparql-anything/sparql-anything-rdf#readme"
"Bug Tracker" = "https://github.com/sparql-anything/sparql-anything-rdf/issues"

[project.scripts]
sparql-anything-rdf = "sparql_anything_rdf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
